--- a/axecollector/main_app/templates/axes/index.html
+++ b/axecollector/main_app/templates/axes/index.html
@@ -5,13 +5,19 @@
 
 {% for axe in axes %}
   <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ axe.name }}</span>
-      <p>Year: {{ axe.year }}</p>
-      <p>Make: {{ axe.make }}</p>
-      <p>Model: {{ axe.model }}</p>
-      <p>Description: {{ axe.description }}</p>
-    </div>
+    <a href="{% url 'detail' axe.id %}">
+        <div class="card-content">
+        <span class="card-title">{{ axe.name }}</span>
+        <p>Year: {{ axe.year }}</p>
+        <p>Make: {{ axe.make }}</p>
+        <p>Model: {{ axe.model }}</p>
+        <p>Color: {{ axe.color }}</p>
+        {% if axe.serial_number%}
+            <p>Serial Number: {{ axe.serial_number }}</p>
+        {% endif%}
+        <p>Description: {{ axe.description }}</p>
+        </div>
+    </a>
   </div>
 {% endfor %}
 
