--- a/axecollector/main_app/templates/home.html
+++ b/axecollector/main_app/templates/home.html
@@ -2,12 +2,14 @@
 {% block content %}
 
 <h1>Home 🤘</h1>
-<h3>&nbsp&nbsp&nbsp /) </h3>
-<h3>&nbsp&nbsp  /( </h3>
-<h3>&nbsp&nbsp  || </h3>
-<h3>&nbsp&nbsp  || </h3>
-<h3> &nbsp&nbsp || </h3>
-<h3>(\||/) </h3>
-<h3>&nbsp )&nbsp&nbsp ( </h3>
-<h3>(____) </h3>
+<h4>
+  &nbsp&nbsp&nbsp /) <br>
+  &nbsp&nbsp  /( <br>
+  &nbsp&nbsp  || <br>
+  &nbsp&nbsp  || <br>
+  &nbsp&nbsp || <br>
+  (\||/) <br>
+  &nbsp )&nbsp&nbsp ( <br>
+  (____) 
+</h4>
 {% endblock %}
