--- a/axecollector/main_app/templates/axes/detail.html
+++ b/axecollector/main_app/templates/axes/detail.html
@@ -52,6 +52,75 @@
   </div>
 </div>
 
+<hr>
+
+<div class="row">
+<div class="col s6">
+    <h3>{{ axe.name }}'s Current Strings</h3>
+    {% if axe.strings.count %}
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">
+            <span>{{ axe.strings.last.name }}</span><br> 
+            {% if axe.string.last.material%}
+              {{axe.strings.last.material}}<br>
+            {% endif %}
+            {{ axe.strings.last.guage }}
+          </span>
+        </div>
+      </div>
+    {% else %}
+      <h5>No Strings :(</h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>{{ axe.name }}'s Past Strings</h3>
+    {% if axe.strings.count %}
+      {% for string in axe.strings.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <span>{{ string.name }}</span><br> 
+              {% if string.material %}
+                {{ string.material }}<br>
+              {% endif %}
+              {{ string.guage }}
+            </span>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Strings :(</h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>Available Strings</h3>
+    {% if strings.count %}
+      {% for string in strings.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <span>{{ string.name }}</span><br> 
+              {% if string.material %}
+                {{ string.material }}<br>
+              {% endif %}
+              {{ string.guage }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_string' axe.id string.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{axe.name}} Has Used All Available Strings</h5>
+    {% endif %}
+  </div>
+</div>
+
 <script>
   const dateEl = document.getElementById('id_date');
   M.Datepicker.init(dateEl, {
