--- a/axecollector/main_app/templates/base.html
+++ b/axecollector/main_app/templates/base.html
@@ -37,7 +37,9 @@
         </div>
       </nav>
     </header>
-    <main class="container">{% block content %} {% endblock %}</main>
+    <main class="container">
+    {% block content %} 
+    {% endblock %}</main>
     <footer class="page-footer">
       <div class="right">
         All Rights Reserved, &copy; 2020 Axe Collector &nbsp;
