--- a/axecollector/main_app/templates/axes/index.html
+++ b/axecollector/main_app/templates/axes/index.html
@@ -16,6 +16,9 @@
         <p>Serial Number: {{ axe.serial_number }}</p>
       {% endif%}
       <p>Description: {{ axe.description }}</p>
+      {% if axe.setup_specs%}
+        <p>Setup Specifications: {{ axe.setup_specs }}</p>
+      {% endif%}
     </div>
   </a>
 </div>
