--- a/axecollector/main_app/templates/axes/detail.html
+++ b/axecollector/main_app/templates/axes/detail.html
@@ -24,6 +24,19 @@
         <a href="{% url 'axes_update' axe.id %}">Edit</a>
         <a href="{% url 'axes_delete' axe.id %}">Delete</a>
       </div>
+      {% for photo in axe.photo_set.all %}
+        <img class="responsive-img card-panel" src="{{photo.url}}">
+      {% empty %}
+        <div class="card-panel red-text center-align">No Photos Uploaded</div>
+      {% endfor %}
+
+      <form action="{% url 'add_photo' axe.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+        {% csrf_token %}
+        <input type="file" name="photo-file">
+        <br><br>
+        <input type="submit" class="btn" value="Upload Photo">
+      </form>
+
     </div>
   </div>
   <div class="col s6">
@@ -110,29 +123,27 @@
   </div>
   <div class="col s6">
     <h3>Strings That Have Not Yet Been Tried on {{axe.name}}</h3>
-    {% if strings.count %}
-      {% for string in strings.all %}
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">
-              <span>{{ string.name }}</span><br> 
-              {% if string.material %}
-                {{ string.material }}<br>
-              {% endif %}
-              {{ string.guage }}
-            </span>
-          </div>
-          <div class="card-action">
-            <form action="{% url 'assoc_string' axe.id string.id %}" method="post">
-              {% csrf_token %}
-              <button type="submit" class="btn">Add</button>
-            </form>
-          </div>
+    {% for string in strings.all %}
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">
+            <span>{{ string.name }}</span><br> 
+            {% if string.material %}
+              {{ string.material }}<br>
+            {% endif %}
+            {{ string.guage }}
+          </span>
         </div>
-      {% endfor %}
-    {% else %}
+        <div class="card-action">
+          <form action="{% url 'assoc_string' axe.id string.id %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn">Add</button>
+          </form>
+        </div>
+      </div>
+    {% empty %}
       <h5>{{axe.name}} Has Tried All Available Strings</h5>
-    {% endif %}
+    {% endfor %}
   </div>
 </div>
 
