--- a/axecollector/main_app/templates/axes/detail.html
+++ b/axecollector/main_app/templates/axes/detail.html
@@ -29,14 +29,12 @@
       {% empty %}
         <div class="card-panel red-text center-align">No Photos Uploaded</div>
       {% endfor %}
-
-      <form action="{% url 'add_photo' axe.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      <form action="{% url 'add_axe_photo' axe.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
         {% csrf_token %}
         <input type="file" name="photo-file">
         <br><br>
         <input type="submit" class="btn" value="Upload Photo">
       </form>
-
     </div>
   </div>
   <div class="col s6">
