--- a/axecollector/main_app/templates/main_app/string_detail.html
+++ b/axecollector/main_app/templates/main_app/string_detail.html
@@ -17,6 +17,17 @@
         <a href="{% url 'strings_update' string.id %}">Edit</a>
         <a href="{% url 'strings_delete' string.id %}">Delete</a>
       </div>
+      {% for photo in string.photo_set.all %}
+        <img class="responsive-img card-panel" src="{{photo.url}}">
+      {% empty %}
+        <div class="card-panel red-text center-align">No Photos Uploaded</div>
+      {% endfor %}
+      <form action="{% url 'add_string_photo' string.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+        {% csrf_token %}
+        <input type="file" name="photo-file">
+        <br><br>
+        <input type="submit" class="btn" value="Upload Photo">
+      </form>
     </div>
   </div>
 </div>
