--- a/axecollector/main_app/templates/home.html
+++ b/axecollector/main_app/templates/home.html
@@ -3,15 +3,17 @@
 
 <h1>Home 🤘</h1>
 
-<h4>
-  &nbsp&nbsp&nbsp /) <br>
-  &nbsp&nbsp  /( <br>
-  &nbsp&nbsp  || <br>
-  &nbsp&nbsp  || <br>
-  &nbsp&nbsp || <br>
-  (\||/) <br>
-  &nbsp )&nbsp&nbsp ( <br>
-  (____) 
-</h4>
+<div>
+  <h4>
+    &nbsp&nbsp&nbsp /) <br>
+    &nbsp&nbsp  /( <br>
+    &nbsp&nbsp  || <br>
+    &nbsp&nbsp  || <br>
+    &nbsp&nbsp || <br>
+    (\||/) <br>
+    &nbsp )&nbsp&nbsp ( <br>
+    (____) 
+  </h4>
+</div>
 
 {% endblock %}
