--- a/axecollector/main_app/templates/base.html
+++ b/axecollector/main_app/templates/base.html
@@ -29,10 +29,16 @@
           </ul>
           <ul class="right">
             <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'axes_create' %}">Add an Axe</a></li>
-            <li><a href="{% url 'strings_create' %}">Add a Set of Strings</a></li>
-            <li><a href="{% url 'strings_index' %}">View All Strings</a></li>
-            <li><a href="{% url 'index' %}">View All My Axes</a></li>
+            {% if user.is_authenticated %}
+              <li><a href="{% url 'axes_create' %}">Add an Axe</a></li>
+              <li><a href="{% url 'strings_create' %}">Add a Set of Strings</a></li>
+              <li><a href="{% url 'strings_index' %}">View All Strings</a></li>
+              <li><a href="{% url 'index' %}">View All My Axes</a></li>
+              <li><a href="{% url 'logout' %}">Log Out</a></li>
+            {% else %}
+              <li><a href="{% url 'signup' %}">Sign Up</a></li>
+              <li><a href="{% url 'login' %}">Log In</a></li>
+            {% endif %}
           </ul>
         </div>
       </nav>
