--- a/axecollector/main_app/templates/registration/signup.html
+++ b/axecollector/main_app/templates/registration/signup.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block content%}
 
 <h1>Sign Up</h1>
 
-{% if error_message %}<p class="red-text">{{ error_message }}</p>{% endif %}
+<p class="red-text">{{ error_message }}</p>
 
-<form method="POST" action="{% url 'signup' %}">
+<form method="post" action="{% url 'signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" class="btn" value="signup">
+  <input type="submit" class="btn" value="Sign Up">
 </form>
 
 {% endblock %}
